스타일 변경

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,10 +75,11 @@ a {
 .reports {
   width: 100%;
   display: flex;
+  justify-content: space-around; 
 }
 
 .report {
-  width: 33%;
+  width: 30%;
   padding-top: 1vh;
 }
 
