--- a/app/globals.css
+++ b/app/globals.css
@@ -75,7 +75,7 @@ a {
 .reports {
   width: 100%;
   display: flex;
-  justify-content: space-around; 
+  justify-content: space-between; 
 }
 
 .report {
