--- a/app/globals.css
+++ b/app/globals.css
@@ -8,10 +8,17 @@
 
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css");
 
+/* @font-face {
+  font-family: "AppleSDGothicNeo";
+  src: url("/assets/APPLESDGOTHICNEOR.ttf");
+  font-weight: 300;
+} */
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  /* font-family: "AppleSDGothicNeo", sans-serif; */
   font-family: Pretendard, sans-serif;
 }
 
@@ -77,7 +84,7 @@ a {
 .reports {
   width: 100%;
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
 }
 
 .report {
