아 진짜 일하기 싫다

--- a/app/globals.css
+++ b/app/globals.css
@@ -162,6 +162,10 @@ a {
   text-align: center;
 }
 
+.gotoReports {
+	text-decoration: none;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
